# chess

./: .gitignore  CMakeLists.txt  README.md  bitboards.c  gameplay.c  makefile
.cache/clangd/index/: IMG.c.9D5BE79136C2F2A8.idx  IMG_WIC.c.056EDDD2CCE0F8A2.idx  IMG_avif.c.B27F78BA6B7538F1.idx  IMG_bmp.c.47CBF18A5894EFBC.idx  IMG_gif.c.DF46C4F6A137E4F1.idx  IMG_jpg.c.CEA860352179387E.idx  IMG_jxl.c.E4B257185DB92CDD.idx  IMG_lbm.c.2F47DA18A1C2A414.idx  IMG_pcx.c.B81CFAA933A26E18.idx  IMG_png.c.A3DAC47143BA1685.idx  IMG_pnm.c.13DBEC95AF9CC357.idx  IMG_qoi.c.075B6FBBD982F503.idx  IMG_stb.c.19C2380D43E29C53.idx  IMG_svg.c.13A6593D22CB59E9.idx  IMG_tga.c.D191C24AF603E5D3.idx  IMG_tif.c.4C33C02EB4C5B5CB.idx  IMG_webp.c.08D827E99EC98E45.idx  IMG_xcf.c.2DBDF1FB0FFD5A5B.idx  IMG_xpm.c.16F13DAD2324730D.idx  IMG_xv.c.3D321B6B1356220D.idx  SDL.c.0904CFE9D3328E92.idx  SDL.h.E875BC2AEF334A81.idx  SDL_RLEaccel.c.51D81874AFE03A92.idx  SDL_RLEaccel_c.h.0B87E4F31FC891A3.idx  SDL_alsa_audio.c.614D925A73E45C14.idx  SDL_alsa_audio.h.87E7D516D8706D31.idx  SDL_assert.c.986461E92E3A4425.idx  SDL_assert.h.CE7C9AFF73B41305.idx  SDL_assert_c.h.99C8C939BB3DC8E8.idx  SDL_atomic.c.57DAF4801A4DE187.idx  SDL_atomic.h.DEEEE33C420E2264.idx  SDL_audio.c.CB97439E916A2CA0.idx  SDL_audio.h.93CE7361D5E49587.idx  SDL_audio_c.h.3D5E39D5830E55E4.idx  SDL_audio_channel_converters.h.F2D13AA4F2DBBE15.idx  SDL_audio_resampler_filter.h.70FDE92D1370910E.idx  SDL_audiocvt.c.EA4D48EFF05CC394.idx  SDL_audiodev.c.BB129143D74F3F7D.idx  SDL_audiodev_c.h.0D3C82C654CFFAB2.idx  SDL_audiotypecvt.c.406D06A5E388FE0A.idx  (+885 more)
gui/: gui.c
include/: bitboards.h  chess.h  mydef.h  rules.h
lib/SDL_ttf-release-2.22.0/: CMakeLists.txt
src/: bitboards.c  gameplay.c  gui.c  main.c  rules2ver.c
